[gd_scene load_steps=6 format=3 uid="uid://cjv01cu3spgw1"]

[ext_resource type="Script" path="res://Scripts/Fae1.gd" id="1_da5pv"]
[ext_resource type="PackedScene" uid="uid://5gnjqmk828vm" path="res://Sprites/Fae1.aseprite" id="2_yhncq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwmpu"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_4jocg"]
radius = 337.073

[sub_resource type="CircleShape2D" id="CircleShape2D_u5xin"]
radius = 59.0085

[node name="Fae1" type="CharacterBody2D"]
collision_layer = 32769
collision_mask = 32771
script = ExtResource("1_da5pv")

[node name="Fae1" parent="." instance=ExtResource("2_yhncq")]
position = Vector2(-2.38419e-07, -4.76837e-07)
scale = Vector2(2.5, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dwmpu")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4jocg")

[node name="AttackArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
shape = SubResource("CircleShape2D_u5xin")
debug_color = Color(0.980392, 0, 0.392157, 0.419608)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -32.0
offset_top = -23.0
offset_right = 32.0
offset_bottom = -16.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 1.6

[node name="Recovery" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Recovery" to="." method="_on_recovery_timeout"]
